--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css">
-    <title>基础框架</title>
+    <title>开箱即用的后台管理系统</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
